lib/src/lychee_player_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Bindings for `lychee_cpp/flutter/lychee_player_plugin.h`.
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class LycheePlayerBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  LycheePlayerBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  LycheePlayerBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  ffi.Pointer<ffi.Void> lychee_player_create(
    ffi.Pointer<ffi.Char> file_path,
    int send_port,
  ) {
    return _lychee_player_create(
      file_path,
      send_port,
    );
  }

  late final _lychee_player_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Char>, ffi.Int64)>>('lychee_player_create');
  late final _lychee_player_create = _lychee_player_createPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Char>, int)>();

  void lychee_player_dispose(
    ffi.Pointer<ffi.Void> player,
  ) {
    return _lychee_player_dispose(
      player,
    );
  }

  late final _lychee_player_disposePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'lychee_player_dispose');
  late final _lychee_player_dispose = _lychee_player_disposePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void lychee_player_set_play_when_ready(
    ffi.Pointer<ffi.Void> player,
    bool play_when_ready,
  ) {
    return _lychee_player_set_play_when_ready(
      player,
      play_when_ready,
    );
  }

  late final _lychee_player_set_play_when_readyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Bool)>>('lychee_player_set_play_when_ready');
  late final _lychee_player_set_play_when_ready =
      _lychee_player_set_play_when_readyPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, bool)>();

  void lychee_player_seek(
    ffi.Pointer<ffi.Void> player,
    double time,
  ) {
    return _lychee_player_seek(
      player,
      time,
    );
  }

  late final _lychee_player_seekPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>, ffi.Double)>>('lychee_player_seek');
  late final _lychee_player_seek = _lychee_player_seekPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, double)>();

  double lychee_player_get_current_time(
    ffi.Pointer<ffi.Void> player,
  ) {
    return _lychee_player_get_current_time(
      player,
    );
  }

  late final _lychee_player_get_current_timePtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Pointer<ffi.Void>)>>(
          'lychee_player_get_current_time');
  late final _lychee_player_get_current_time =
      _lychee_player_get_current_timePtr
          .asFunction<double Function(ffi.Pointer<ffi.Void>)>();

  double lychee_player_get_duration(
    ffi.Pointer<ffi.Void> player,
  ) {
    return _lychee_player_get_duration(
      player,
    );
  }

  late final _lychee_player_get_durationPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Pointer<ffi.Void>)>>(
          'lychee_player_get_duration');
  late final _lychee_player_get_duration = _lychee_player_get_durationPtr
      .asFunction<double Function(ffi.Pointer<ffi.Void>)>();

  void lychee_player_initialize_dart(
    ffi.Pointer<ffi.Void> native_port,
  ) {
    return _lychee_player_initialize_dart(
      native_port,
    );
  }

  late final _lychee_player_initialize_dartPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'lychee_player_initialize_dart');
  late final _lychee_player_initialize_dart = _lychee_player_initialize_dartPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();
}

const int MEDIA_MSG_PLAYER_STATE_CHANGED = 40001;
